[package]
name = "kakunin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
rand = "0.8.5"
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
trust-dns-resolver = "0.22.0"

[dev-dependencies]
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt"] }
